Fix comms event, various bugs, add todos

--- a/customGameSettings.json
+++ b/customGameSettings.json
@@ -6,21 +6,17 @@
                 "Ana",
                 "Baptiste",
                 "Bastion",
-                "Brigitte",
-                "Doomfist",
                 "Mccree",
                 "Mei",
-                "Moira",
-                "Orisa",
                 "Reaper",
-                "Reinhardt",
                 "Roadhog",
                 "Soldier: 76",
                 "Symmetra",
                 "Torbjörn",
                 "Tracer",
                 "Widowmaker",
-                "Winston"
+                "Winston",
+                "Zarya"
             ],
             "General": {
                 "Ultimate Generation - Passive": 0,
