--- a/devTools/customGameSettings.json
+++ b/devTools/customGameSettings.json
@@ -42,5 +42,5 @@
         "Match Voice Chat": true,
         "Pause Game On Player Disconnect": true
     },
-    "Description": "= Amongwatch =\n\nPlay Among Us in Overwatch!\n\nCreated by depth1stsearch (Brandon Hoane)\n\nhttps://github.com/hoane/Overwatch-Among-Us"
+    "Description": ""
 }
